--- a/src/app/components/sidebar/sidebar.html
+++ b/src/app/components/sidebar/sidebar.html
@@ -1,17 +1,155 @@
+<!-- sidebar.html -->
 <nav class="sidebar">
-  <ul *ngIf="rol === 'USER'">
-    <li><a [routerLink]="'/user/inicio'">Inicio</a></li>
-    <li><a [routerLink]="'/user/documentos'">Subir Documentos</a></li>
-    <li><a [routerLink]="'/user/reportes'">Reportes</a></li>
-    <li><a [routerLink]="'/user/grupos'">Grupos</a></li>
-    <li><a [routerLink]="'/user/soporte'">Soporte</a></li>
-  </ul>
+  <!-- Logo Section -->
+  <div class="sidebar-logo">
+    <svg viewBox="0 0 120 120" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <circle cx="60" cy="35" r="8" fill="white"/>
+      <path d="M45 50 L60 35 L75 50 L60 80 Z" fill="white" opacity="0.8"/>
+      <path d="M50 90 Q60 85 70 90" stroke="white" stroke-width="3" fill="none"/>
+    </svg>
+  </div>
 
-  <ul *ngIf="rol === 'ADMIN'">
-    <li><a [routerLink]="'/admin/inicio'">Inicio</a></li>
-    <li><a [routerLink]="'/admin/actualizaciones'">Actualizaciones</a></li>
-    <li><a [routerLink]="'/admin/reportes-uso'">Reportes de uso</a></li>
-    <li><a [routerLink]="'/admin/alertas'">Alertas</a></li>
-    <li><a [routerLink]="'/admin/accesos'">Accesos</a></li>
-  </ul>
+  <!-- Menu Section -->
+  <div class="sidebar-menu">
+    <!-- Usuario Section -->
+    <ul *ngIf="rol === 'USER'">
+      <li>
+        <a [routerLink]="['/user/inicio']"
+           routerLinkActive="active"
+           class="menu-item">
+          <svg width="39" height="43" viewBox="0 0 39 43" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M13.5 41.5V21.5H25.5V41.5M1.5 15.5L19.5 1.5L37.5 15.5V37.5C37.5 38.5609 37.0786 39.5783 36.3284 40.3284C35.5783 41.0786 34.5609 41.5 33.5 41.5H5.5C4.43913 41.5 3.42172 41.0786 2.67157 40.3284C1.92143 39.5783 1.5 38.5609 1.5 37.5V15.5Z" stroke="white" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+          <span>Inicio</span>
+        </a>
+      </li>
+
+      <li>
+        <a [routerLink]="['/user/documentos']" routerLinkActive="active" class="menu-item">
+          <svg width="45" height="42" viewBox="0 0 45 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M23.4999 5.83331L24.6497 4.87005L23.4999 3.4975L22.3501 4.87005L23.4999 5.83331ZM21.9999 27.7083C21.9999 28.5367 22.6715 29.2083 23.4999 29.2083C24.3283 29.2083 24.9999 28.5367 24.9999 27.7083H23.4999H21.9999ZM30.8301 14.5833L31.9799 13.6201L24.6497 4.87005L23.4999 5.83331L22.3501 6.79657L29.6802 15.5466L30.8301 14.5833ZM23.4999 5.83331L22.3501 4.87005L15.0199 13.6201L16.1697 14.5833L17.3195 15.5466L24.6497 6.79657L23.4999 5.83331ZM23.4999 5.83331H21.9999V27.7083H23.4999H24.9999V5.83331H23.4999Z" fill="white"/>
+            <path d="M12.5943 17H6.5C3.73858 17 1.5 19.2386 1.5 22V35C1.5 37.7614 3.73858 40 6.5 40H38.5C41.2614 40 43.5 37.7614 43.5 35V22C43.5 19.2386 41.2614 17 38.5 17H33.5943" stroke="white" stroke-width="3"/>
+          </svg>
+
+          <span>Subir Documentos</span>
+        </a>
+      </li>
+
+      <li>
+        <a [routerLink]="['/user/reportes']"
+           routerLinkActive="active"
+           class="menu-item">
+          <svg width="46" height="48" viewBox="0 0 46 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M42.1668 20V30C42.1668 40 38.3335 44 28.7502 44H17.2502C7.66683 44 3.8335 40 3.8335 30V18C3.8335 8 7.66683 4 17.2502 4H26.8335M42.1668 20H34.5002C28.7502 20 26.8335 18 26.8335 12V4M42.1668 20L26.8335 4M13.4168 26H24.9168M13.4168 34H21.0835" stroke="white" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+
+          <span>Reportes</span>
+        </a>
+      </li>
+
+      <li>
+        <a [routerLink]="['/user/soporte']"
+           routerLinkActive="active"
+           class="menu-item">
+          <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M31.1936 22.1515H31.2098M23.9919 22.1515H24.008M16.7901 22.1515H16.8063M17.7 36.5085H16.8C9.6 36.5085 6 34.7139 6 25.7408V16.7677C6 9.58923 9.6 6 16.8 6H31.2C38.4 6 42 9.58923 42 16.7677V25.7408C42 32.9192 38.4 36.5085 31.2 36.5085H30.3C29.742 36.5085 29.202 36.7777 28.86 37.2263L26.16 40.8156C24.972 42.3948 23.028 42.3948 21.84 40.8156L19.14 37.2263C18.852 36.8315 18.186 36.5085 17.7 36.5085Z" stroke="white" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+
+          <span>Soporte</span>
+        </a>
+      </li>
+
+      <li>
+        <a [routerLink]="['/user/grupos']"
+           routerLinkActive="active"
+           class="menu-item">
+          <svg width="44" height="44" viewBox="0 0 44 44" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M38.5 20.35V30.25C38.5 36.85 36.85 38.5 30.25 38.5H13.75C7.15 38.5 5.5 36.85 5.5 30.25V13.75C5.5 7.15 7.15 5.5 13.75 5.5H16.225C18.7 5.5 19.2445 6.226 20.185 7.48L22.66 10.78C23.287 11.605 23.65 12.1 25.3 12.1H30.25C36.85 12.1 38.5 13.75 38.5 20.35Z" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+          </svg>
+
+          <span>Grupos</span>
+        </a>
+      </li>
+    </ul>
+
+    <!-- Admin Section -->
+    <ul *ngIf="rol === 'ADMIN'">
+      <li>
+        <a [routerLink]="['/admin/inicio']"
+           routerLinkActive="active"
+           class="menu-item">
+          <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6">
+            </path>
+          </svg>
+          <span>Inicio</span>
+        </a>
+      </li>
+
+      <li>
+        <a [routerLink]="['/admin/actualizaciones']"
+           routerLinkActive="active"
+           class="menu-item">
+          <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15">
+            </path>
+          </svg>
+          <span>Actualizaciones</span>
+        </a>
+      </li>
+
+      <li>
+        <a [routerLink]="['/admin/reportes-uso']"
+           routerLinkActive="active"
+           class="menu-item">
+          <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z">
+            </path>
+          </svg>
+          <span>Reportes de Uso</span>
+        </a>
+      </li>
+
+      <li>
+        <a [routerLink]="['/admin/alertas']"
+           routerLinkActive="active"
+           class="menu-item">
+          <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9">
+            </path>
+          </svg>
+          <span>Alertas</span>
+        </a>
+      </li>
+
+      <li>
+        <a [routerLink]="['/admin/accesos']"
+           routerLinkActive="active"
+           class="menu-item">
+          <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z">
+            </path>
+          </svg>
+          <span>Accesos</span>
+        </a>
+      </li>
+    </ul>
+  </div>
+
+  <!-- Logout Section -->
+  <div class="sidebar-footer">
+    <a class="menu-item logout">
+      <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1">
+        </path>
+      </svg>
+      <span>Cerrar sesión</span>
+    </a>
+  </div>
 </nav>
