--- a/src/app/pages/private/admin/inicio/inicio.html
+++ b/src/app/pages/private/admin/inicio/inicio.html
@@ -1,1 +1,21 @@
-<p>inicio works!</p>
+<div class="dashboard">
+  <div class="stats">
+    <div class="card">
+      <h3>Usuarios concurrentes</h3>
+      <p>1,345</p>
+    </div>
+    <div class="card">
+      <h3>Tiempo de respuesta</h3>
+      <p>350 ms</p>
+    </div>
+    <div class="card">
+      <h3>Tasa global de fraude</h3>
+      <p>12%</p>
+    </div>
+  </div>
+
+  <div class="chart-card">
+    <h3>Monitoreo de rendimiento</h3>
+    <canvas id="performanceChart"></canvas>
+  </div>
+</div>
