--- a/src/app/layouts/public-layout/public-layout.html
+++ b/src/app/layouts/public-layout/public-layout.html
@@ -1,7 +1,9 @@
-<app-navbar></app-navbar>
+<div class="public-layout">
+  <app-navbar></app-navbar>
 
-<div class="content">
-  <router-outlet></router-outlet>
+  <main class="public-content">
+    <router-outlet></router-outlet>
+  </main>
+
+  <app-footer></app-footer>
 </div>
-
-<app-footer></app-footer>
