--- a/src/app/pages/public/home/home.html
+++ b/src/app/pages/public/home/home.html
@@ -1,1 +1,92 @@
-<p>home works!</p>
+<!-- SECCIÓN PRINCIPAL -->
+<section class="principal-section" id="Principal">
+  <div class="principal-info">
+    <h3>
+      <span class="Mayuscula">CONFIANZA</span> en cada firma,<br />
+      <span class="Mayuscula">SEGURIDAD</span> en cada documento
+    </h3>
+    <h1>Detección precisa de fraudes en firmas manuscritas</h1>
+    <p>
+      Transformamos la manera en que verificas documentos, detectando fraudes de forma rápida y eficiente.
+      Utilizamos tecnología avanzada para garantizar la autenticidad de cada firma, protegiendo tus procesos
+      legales y financieros. No dejamos la seguridad al azar, confiamos en la innovación.
+    </p>
+    <div id="Submit">
+      <a routerLink="/login" class="btn_submit">Crear Cuenta</a>
+    </div>
+  </div>
+</section>
+
+<!-- SECCIÓN SERVICIOS -->
+<section class="servicios-section" id="Servicios">
+  <div class="servicios-info">
+    <h3 class="servicios-titulo">Servicios</h3>
+    <p class="servicios-texto">
+      Protege tus documentos con nuestra avanzada plataforma de seguridad. Utilizamos tecnología de firma
+      electrónica y autenticación para garantizar la integridad y autenticidad de tus documentos en entornos
+      legales, notariales y financieros.
+    </p>
+
+    <div class="button-icon-container">
+      <div class="icono-group left">
+        <img height="40" width="50" src="assets/img/challenge.png" alt="" />
+        <img height="40" width="50" src="assets/img/icono.png" alt="" />
+      </div>
+
+      <div id="Iniciar">
+        <button class="btn_iniciar" routerLink="/servicios">
+          Iniciar <i class="ri-arrow-right-line btn-icon"></i>
+        </button>
+      </div>
+
+      <div class="icono-group right">
+        <img height="40" width="50" src="assets/img/icono.png" alt="" />
+        <img height="40" width="50" src="assets/img/icono.png" alt="" />
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- SECCIÓN NOSOTROS -->
+<section class="nosotros-section" id="Nosotros">
+  <div class="nosotros-info">
+    <p class="nosotros-texto">
+      En <strong>AuthenTrace</strong>, somos especialistas en seguridad digital, ofreciendo soluciones
+      avanzadas de firma electrónica y autenticación de documentos.
+    </p>
+    <img height="500" width="608" src="assets/img/nosotros.png" alt="" />
+  </div>
+</section>
+
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+  <path
+    fill="#ba181b"
+    fill-opacity="0.15"
+    d="M0,192L34.3,186.7C68.6,181,137,171,206,181.3C274.3,192,343,224,411,208C480,192,549,128,617,128C685.7,128,754,192,823,192C891.4,192,960,128,1029,112C1097.1,96,1166,128,1234,149.3C1302.9,171,1371,181,1406,186.7L1440,192L1440,0L1405.7,0C1371.4,0,1303,0,1234,0C1165.7,0,1097,0,1029,0C960,0,891,0,823,0C754.3,0,686,0,617,0C548.6,0,480,0,411,0C342.9,0,274,0,206,0C137.1,0,69,0,34,0L0,0Z"
+  ></path>
+</svg>
+
+<!-- SECCIÓN SOPORTE -->
+<section class="soporte-section" id="Soporte">
+  <h2 class="soporte-titulo">Soporte</h2>
+
+  <div class="soporte-item">
+    <i class="ri-team-fill"></i>
+    <h3>Contáctate con un Especialista</h3>
+    <p>Para consultas directas y asistencia personalizada.</p>
+  </div>
+
+  <div class="soporte-item">
+    <i class="ri-question-fill"></i>
+    <h3>Preguntas Frecuentes (FAQ)</h3>
+    <p>Respuestas a las preguntas más comunes sobre el uso de la plataforma, problemas técnicos y políticas.</p>
+  </div>
+
+  <div class="soporte-item">
+    <i class="ri-hand-heart-fill"></i>
+    <h3>Guías y Tutoriales</h3>
+    <p>Recursos como manuales, tutoriales y documentos de ayuda para facilitar el uso de la plataforma.</p>
+  </div>
+
+  <p class="soporte-seguridad">¡Haz que la seguridad sea tu aliado!</p>
+</section>
