--- a/src/app/pages/public/home/home.html
+++ b/src/app/pages/public/home/home.html
@@ -29,7 +29,7 @@
 
     <div class="button-icon-container">
       <div class="icono-group left">
-        <img height="40" width="50" src="assets/img/challenge.png" alt="" />
+        <img height="40" width="50" src="assets/img/icono.png" alt="" />
         <img height="40" width="50" src="assets/img/icono.png" alt="" />
       </div>
 
