Diseño del login y crear cuenta

--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -2,7 +2,7 @@
   <div class="footer-container">
     <!-- Columna 1: Logo + Derechos -->
     <div class="footer-company">
-      <img src="assets/img/logo_at.png" alt="AuthenTrace" class="footer-logo" />
+      <img src="assets/img/logo_footer.png" alt="AuthenTrace" class="footer-logo" />
       <p class="copyright">© 2024 AuthenTrace. Todos los derechos reservados.</p>
       <p class="follow">Síguenos!</p>
       <div class="social-links">
