--- a/src/app/pages/public/home/home.html
+++ b/src/app/pages/public/home/home.html
@@ -12,9 +12,10 @@
       legales y financieros. No dejamos la seguridad al azar, confiamos en la innovación.
     </p>
     <div id="Submit">
-      <a routerLink="/login" class="btn_submit">Crear Cuenta</a>
+      <a routerLink="/crear-cuenta" class="btn_submit">Crear Cuenta</a>
     </div>
   </div>
+
 </section>
 
 <!-- SECCIÓN SERVICIOS -->
