--- a/src/app/pages/public/login/login.html
+++ b/src/app/pages/public/login/login.html
@@ -1,1 +1,25 @@
-<p>login works!</p>
+<section class="login-container">
+  <div class="login-card">
+    <h1 class="login-title">Iniciar Sesión</h1>
+
+    <form>
+      <label for="email">Correo electrónico:</label>
+      <input type="email" id="email" placeholder="Ingrese su correo" required />
+
+      <label for="password">Contraseña:</label>
+      <input type="password" id="password" placeholder="Ingrese su contraseña" required />
+
+      <div class="remember">
+        <input type="checkbox" id="remember" />
+        <label for="remember">Recordar sesión</label>
+      </div>
+
+      <button type="submit" class="btn-login">Iniciar Sesión</button>
+    </form>
+    <p class="register-text">
+      ¿Aún no tienes una cuenta?
+      <a routerLink="/crear-cuenta" class="register-link">Crea una aquí</a>
+    </p>
+  </div>
+</section>
+
