--- a/src/app/pages/private/user/grupos/grupos.html
+++ b/src/app/pages/private/user/grupos/grupos.html
@@ -1,1 +1,81 @@
-<p>grupos works!</p>
+<!-- ==================== HEADER ==================== -->
+<div class="grupos-container">
+  <h1 class="grupos-title">Grupos de Informes</h1>
+
+  <!-- ==================== BUSCADOR ==================== -->
+  <div class="search-wrapper">
+    <mat-icon class="search-icon"> <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M26.1333 28L17.7333 19.6C17.0667 20.1333 16.3 20.5556 15.4333 20.8667C14.5667 21.1778 13.6444 21.3333 12.6667 21.3333C10.2444 21.3333 8.19444 20.4944 6.51667 18.8167C4.83889 17.1389 4 15.0889 4 12.6667C4 10.2444 4.83889 8.19444 6.51667 6.51667C8.19444 4.83889 10.2444 4 12.6667 4C15.0889 4 17.1389 4.83889 18.8167 6.51667C20.4944 8.19444 21.3333 10.2444 21.3333 12.6667C21.3333 13.6444 21.1778 14.5667 20.8667 15.4333C20.5556 16.3 20.1333 17.0667 19.6 17.7333L28 26.1333L26.1333 28ZM12.6667 18.6667C14.3333 18.6667 15.75 18.0833 16.9167 16.9167C18.0833 15.75 18.6667 14.3333 18.6667 12.6667C18.6667 11 18.0833 9.58333 16.9167 8.41667C15.75 7.25 14.3333 6.66667 12.6667 6.66667C11 6.66667 9.58333 7.25 8.41667 8.41667C7.25 9.58333 6.66667 11 6.66667 12.6667C6.66667 14.3333 7.25 15.75 8.41667 16.9167C9.58333 18.0833 11 18.6667 12.6667 18.6667Z" fill="#7D7979"/>
+    </svg>
+    </mat-icon>
+    <input
+      type="text"
+      placeholder="Buscar grupo"
+      class="search-input"
+      [(ngModel)]="searchTerm"
+      (input)="filtrarGrupos()"
+
+    />
+  </div>
+
+  <!-- ==================== GRID DE GRUPOS ==================== -->
+  <div class="grupos-grid">
+
+    <!-- TARJETA: CREAR GRUPO -->
+    <div class="grupo-card crear-grupo-card" (click)="abrirModalCrear()">
+      <button class="crear-grupo-btn" type="button">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M23.1605 11.603C23.1605 12.5686 22.3777 13.3513 21.4121 13.3513H18.324C15.6529 13.3513 13.4876 15.5167 13.4876 18.1878V21.2305C13.4876 22.2964 12.6235 23.1605 11.5575 23.1605C10.4916 23.1605 9.6275 22.2964 9.6275 21.2305V18.1651C9.6275 15.5065 7.47231 13.3513 4.81375 13.3513H1.74839C0.782781 13.3513 0 12.5686 0 11.603C0 10.6373 0.782781 9.85456 1.74839 9.85456H4.81375C7.47231 9.85456 9.6275 7.69937 9.6275 5.04081V1.93004C9.6275 0.864111 10.4916 0 11.5575 0C12.6235 0 13.4876 0.864109 13.4876 1.93004V5.01811C13.4876 7.68921 15.6529 9.85456 18.324 9.85456H21.4121C22.3777 9.85456 23.1605 10.6373 23.1605 11.603Z" fill="white"/>
+        </svg>
+      </button>
+      <p class="crear-grupo-text">Crear Grupo</p>
+    </div>
+
+    <!-- TARJETAS: GRUPOS EXISTENTES -->
+    <!-- TODO: Reemplazar *ngFor con datos reales del backend -->
+    <!-- GET /api/grupos/listar -->
+    <!-- Estructura: { grupos: [{id, nombre, cantidad}] } -->
+    <div
+      *ngFor="let grupo of gruposFiltrados"
+      class="grupo-card"
+      (click)="abrirGrupo(grupo.id)"
+    >
+      <h3 class="grupo-nombre">{{ grupo.nombre }}</h3>
+      <p class="grupo-cantidad">{{ grupo.cantidad }} Informes</p>
+    </div>
+  </div>
+
+</div>
+
+<!-- ==================== MODAL: CREAR GRUPO ==================== -->
+<!-- TODO: Reemplazar con Material Dialog de Angular Material -->
+<div *ngIf="showModalCrear" class="modal-overlay" (click)="cerrarModal()">
+  <div class="modal-content" (click)="$event.stopPropagation()">
+    <h2 class="modal-title">Crear Nuevo Grupo</h2>
+
+    <input
+      type="text"
+      placeholder="Nombre del grupo"
+      class="modal-input"
+      [(ngModel)]="nuevoGrupo"
+      (keyup.enter)="crearGrupo()"
+    />
+
+    <div class="modal-buttons">
+      <button
+        class="modal-btn-cancelar"
+        type="button"
+        (click)="cerrarModal()"
+      >
+        Cancelar
+      </button>
+      <button
+        class="modal-btn-crear"
+        type="button"
+        (click)="crearGrupo()"
+      >
+        Crear
+      </button>
+    </div>
+  </div>
+</div>
