Se implementó el apartado de recuperar contraseña y reiniciar contraseña. Cambios menores a la pagina de inicio de sesión.

--- a/src/app/pages/public/login/login.html
+++ b/src/app/pages/public/login/login.html
@@ -14,11 +14,17 @@
         <label for="remember">Recordar sesión</label>
       </div>
 
+
+
       <button type="submit" class="btn-login">Iniciar Sesión</button>
     </form>
     <p class="register-text">
       ¿Aún no tienes una cuenta?
-      <a routerLink="/crear-cuenta" class="register-link">Crea una aquí</a>
+      <a routerLink="/crear-cuenta" class="register-link"><br>Crea una aquí</a>
+    </p>
+    <p class="register-text">
+      ¿Olvidaste tu contraseña?
+      <a routerLink="/recuperar-contrasenha" class="register-link"><br>Reiníciala aquí</a>
     </p>
   </div>
 </section>
