--- a/src/app/pages/public/login/login.html
+++ b/src/app/pages/public/login/login.html
@@ -2,12 +2,12 @@
   <div class="login-card">
     <h1 class="login-title">Iniciar Sesión</h1>
 
-    <form>
-      <label for="email">Correo electrónico:</label>
-      <input type="email" id="email" placeholder="Ingrese su correo" required />
+    <form (ngSubmit)="iniciarSesion()">
+      <label for="username">Correo electrónico:</label>
+      <input type="text" name="username" [(ngModel)]="username" placeholder="Ingrese su correo" required />
 
       <label for="password">Contraseña:</label>
-      <input type="password" id="password" placeholder="Ingrese su contraseña" required />
+      <input type="password" name="password" [(ngModel)]="password" placeholder="Ingrese su contraseña" required />
 
       <div class="remember">
         <input type="checkbox" id="remember" />
