--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,22 @@
-/* You can add global styles to this file, and also import other style files */
+/* Fuente principal */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&display=swap');
 
-* {
-  font-family: 'Roboto', sans-serif;
-}
-
-body {
-  font-family: 'Roboto', sans-serif;
+/* Reset básico */
+html, body {
+  height: 100%;
   margin: 0;
   padding: 0;
+  font-family: 'Roboto', 'Helvetica Neue', sans-serif;
+  background-color: var(--mat-sys-surface, #fff);
+  color: var(--mat-sys-on-surface, #000);
 }
 
+/* Evitar scroll lateral accidental */
+body {
+  overflow-x: hidden;
+}
 
-
+/* Ajustes generales para tipografía */
+* {
+  box-sizing: border-box;
+}
