--- a/src/app/pages/public/home/home.html
+++ b/src/app/pages/public/home/home.html
@@ -71,7 +71,7 @@
 <section class="soporte-section" id="Soporte">
   <h2 class="soporte-titulo">Soporte</h2>
 
-  <div class="soporte-item">
+  <div class="soporte-item" routerLink="/soporte" fragment="portada">
     <i class="ri-team-fill"></i>
     <h3>Contáctate con un Especialista</h3>
     <p>Para consultas directas y asistencia personalizada.</p>
