--- a/src/app/pages/public/nosotros/nosotros.html
+++ b/src/app/pages/public/nosotros/nosotros.html
@@ -1,1 +1,9 @@
-<p>nosotros works!</p>
+<section class="nosotros-section" id="Nosotros">
+  <div class="nosotros-info">
+    <p class="nosotros-texto">
+      En <strong>AuthenTrace</strong>, somos especialistas en seguridad digital, ofreciendo soluciones
+      avanzadas de firma electrónica y autenticación de documentos.
+    </p>
+    <img height="500" width="608" src="assets/img/nosotros.png" alt="" />
+  </div>
+</section>
