--- a/src/app/pages/public/soporte/soporte.html
+++ b/src/app/pages/public/soporte/soporte.html
@@ -21,7 +21,6 @@
     </div>
 
     <!-- RIGHT: Formulario -->
-    <!-- RIGHT: Formulario -->
     <div class="hero-right">
       <mat-card class="form-card mat-elevation-z6">
         <h3 class="form-card-title">Contactar con Soporte</h3>
@@ -178,6 +177,6 @@
   </div>
   <p class="contact-soport">
     ¿No encuentras lo que buscas?
-    <a routerLink="." fragment="portada" class="register-link">Contacta con nuestro equipo de soporte</a>
+    <a routerLink="/soporte" fragment="portada" class="register-link">Contacta con nuestro equipo de soporte</a>
   </p>
 </section>
