--- a/src/styles.css
+++ b/src/styles.css
@@ -17,3 +17,10 @@ body {
   overflow-x: hidden;
   box-sizing: border-box;
 }
+section[id] {
+  scroll-margin-top: 110px;
+}
+[id] {
+  scroll-margin-top: 100px;
+}
+
