--- a/src/app/layouts/private-layout/private-layout.html
+++ b/src/app/layouts/private-layout/private-layout.html
@@ -1,3 +1,4 @@
+<app-navbar-privado></app-navbar-privado>
 <div class="private-layout">
   <app-sidebar></app-sidebar>
   <div class="main-content">
