--- a/src/app/components/sidebar/sidebar.css
+++ b/src/app/components/sidebar/sidebar.css
@@ -2,13 +2,13 @@
 
 .sidebar {
   width: 210px;
-  min-height: 100vh;
+  height: calc(100vh - 95px);
   background: #660708;
   display: flex;
   flex-direction: column;
   position: fixed;
   left: 0;
-  top: 0;
+  top: 95px;
   z-index: 1000;
   box-shadow: 2px 0 10px rgba(0, 0, 0, 0.3);
 }
