--- a/src/app/components/sidebar/sidebar.html
+++ b/src/app/components/sidebar/sidebar.html
@@ -88,7 +88,7 @@
       </li>
 
       <li>
-        <a [routerLink]="['/admin/actualizaciones']"
+        <a [routerLink]="['/admin/actualizaciones/programar']"
            routerLinkActive="active"
            class="menu-item">
           <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
