--- a/src/app/pages/private/admin/actualizaciones/actualizaciones.html
+++ b/src/app/pages/private/admin/actualizaciones/actualizaciones.html
@@ -1,48 +1,59 @@
 <div class="actualizaciones-container">
   <div class="contenido-principal">
+    <h1 class="titulo-principal">
+      <mat-icon class="icono-titulo">system_update</mat-icon>
+      Gestión de Actualizaciones del Sistema
+    </h1>
+    <div *ngIf="mensajeExito" class="mensaje mensaje-exito">{{ mensajeExito }}</div>
+    <div *ngIf="mensajeError" class="mensaje mensaje-error">{{ mensajeError }}</div>
 
-    <div *ngIf="mensajeExito" class="mensaje mensaje-exito">
-      {{ mensajeExito }}
-    </div>
-    <div *ngIf="mensajeError" class="mensaje mensaje-error">
-      {{ mensajeError }}
-    </div>
 
+    <div class="mat-elevation-z8">
+      <table mat-table [dataSource]="dataSource" matSort>
 
-    <div class="seccion-actualizaciones">
-      <h2>Actualizaciones pendientes</h2>
-
-      <div *ngIf="cargando" class="loading">Cargando...</div>
-
-      <table *ngIf="!cargando" class="tabla-actualizaciones">
-        <thead>
-        <tr>
-          <th>Versión</th>
-          <th>Estado</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr *ngFor="let actualizacion of actualizaciones">
-          <td>Version {{ actualizacion.version }}</td>
-          <td>
-              <span [ngClass]="obtenerClaseEstado(actualizacion.estado)">
-                {{ actualizacion.estado }}
-                <span *ngIf="actualizacion.fechaAplicacion">
-                  el {{ actualizacion.fechaAplicacion }}
-                </span>
-              </span>
-          </td>
-        </tr>
-        </tbody>
+        <!-- Name Column -->
+        <ng-container matColumnDef="version">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Version </th>
+          <td mat-cell *matCellDef="let element"> {{element.version}} </td>
+        </ng-container>
+        <!-- Fecha Column -->
+        <ng-container matColumnDef="fechaProgramada">
+          <th mat-header-cell *matHeaderCellDef> Fecha programada </th>
+          <td mat-cell *matCellDef="let element"> {{element.fechaProgramada|date:'dd/MM/yyyy'}} </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <div *ngIf="actualizaciones.length === 0" class="sin-datos">
+          No hay actualizaciones disponibles
+        </div>
       </table>
-
-      <div *ngIf="!cargando && actualizaciones.length === 0" class="sin-datos">
-        No hay actualizaciones disponibles
-      </div>
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                     showFirstLastButtons
+                     aria-label="Select page of periodic elements">
+      </mat-paginator>
     </div>
+
+
+
+
+
+
+
+
 
 
     <div class="seccion-programacion">
+      <div class="selector-version">
+        <label for="version">Versión     </label>
+        <input
+          type="text"
+          id="version"
+          [(ngModel)]="versionIngresada"
+          class="input-fecha"
+          placeholder="Ej. v1.0.0"
+        />
+      </div>
+
       <div class="selector-fecha">
         <label for="fecha">Fecha</label>
         <input
