--- a/src/app/pages/public/crear-cuenta/crear-cuenta.html
+++ b/src/app/pages/public/crear-cuenta/crear-cuenta.html
@@ -1,19 +1,47 @@
 <section class="submit-container">
-  <div class="submit-card">
+  <mat-card class="submit-card">
     <h1 class="submit-title">CREAR CUENTA</h1>
 
-    <form>
-      <label for="name">Nombres:</label>
-      <input type="text" id="name" placeholder="Ingrese su nombre completo" required />
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+      <mat-form-field appearance="outline" class="full-width">
+        <mat-label>Nombre</mat-label>
+        <input matInput formControlName="nombre" placeholder="Ingrese su nombre" />
+        <mat-error *ngIf="form.get('nombre')?.invalid && form.get('nombre')?.touched">
+          Ingrese un nombre válido.
+        </mat-error>
+      </mat-form-field>
 
-      <label for="first-name">Apellidos:</label>
-      <input type="text" id="first-name" placeholder="Ingrese su apellidos" required />
+      <mat-form-field appearance="outline" class="full-width">
+        <mat-label>Apellido</mat-label>
+        <input matInput formControlName="apellido" placeholder="Ingrese sus apellidos " />
+        <mat-error *ngIf="form.get('apellido')?.invalid && form.get('apellido')?.touched">
+          Ingrese un apellid válido.
+        </mat-error>
+      </mat-form-field>
 
-      <label for="email">Correo electrónico:</label>
-      <input type="email" id="email" placeholder="Ingrese su correo" required />
+      <mat-form-field appearance="outline" class="full-width">
+        <mat-label>Correo electrónico</mat-label>
+        <input matInput formControlName="correo" type="email" placeholder="Ingrese su correo electrónico" />
+        <mat-error *ngIf="form.get('correo')?.invalid && form.get('correo')?.touched">
+          Ingrese un correo válido.
+        </mat-error>
+      </mat-form-field>
 
-      <label for="password">Contraseña:</label>
-      <input type="password" id="password" placeholder="Ingrese su contraseña" required />
+      <mat-form-field appearance="outline" class="full-width">
+        <mat-label>Nombre de Usuario</mat-label>
+        <input matInput formControlName="username" placeholder="Ingrese su nombre de usuario" />
+        <mat-error *ngIf="form.get('username')?.invalid && form.get('username')?.touched">
+          Ingrese un nombre válido.
+        </mat-error>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline" class="full-width">
+        <mat-label>Contraseña</mat-label>
+        <input matInput formControlName="contrasena" type="password" placeholder="Ingrese su contraseña" />
+        <mat-error *ngIf="form.get('contrasena')?.invalid && form.get('contrasena')?.touched">
+          La contraseña debe tener al menos 6 caracteres.
+        </mat-error>
+      </mat-form-field>
 
       <p class="terms">
         Al continuar, acepta nuestros
@@ -21,12 +49,14 @@
         <a href="#">Política de privacidad</a>.
       </p>
 
-      <button type="submit" class="btn-submit">Registrarse</button>
+      <button mat-raised-button color="primary" class="btn-submit" type="submit">
+        Registrarse
+      </button>
 
       <p class="login-link">
         ¿Ya tienes una cuenta?
-        <a routerLink="/login" class="register-link">Iniciar Sesión</a>
+        <a routerLink="/login">Iniciar Sesión</a>
       </p>
     </form>
-  </div>
+  </mat-card>
 </section>
