--- a/src/app/pages/public/login/login.html
+++ b/src/app/pages/public/login/login.html
@@ -2,23 +2,29 @@
   <div class="login-card">
     <h1 class="login-title">Iniciar Sesión</h1>
 
-    <form>
-      <label for="email">Correo electrónico:</label>
-      <input type="email" id="email" placeholder="Ingrese su correo" required />
+    <form (ngSubmit)="iniciarSesion()">
+      <label for="username">Usuario:</label>
+      <input type="text" name="username" [(ngModel)]="username" placeholder="Ingrese su usuario" required />
 
       <label for="password">Contraseña:</label>
-      <input type="password" id="password" placeholder="Ingrese su contraseña" required />
+      <input type="password" name="password" [(ngModel)]="password" placeholder="Ingrese su contraseña" required />
 
       <div class="remember">
         <input type="checkbox" id="remember" />
         <label for="remember">Recordar sesión</label>
       </div>
 
+
+
       <button type="submit" class="btn-login">Iniciar Sesión</button>
     </form>
     <p class="register-text">
       ¿Aún no tienes una cuenta?
-      <a routerLink="/crear-cuenta" class="register-link">Crea una aquí</a>
+      <a routerLink="/crear-cuenta" class="register-link"><br>Crea una aquí</a>
+    </p>
+    <p class="register-text">
+      ¿Olvidaste tu contraseña?
+      <a routerLink="/recuperar-contrasenha" class="register-link"><br>Reiníciala aquí</a>
     </p>
   </div>
 </section>
